Update lists at 20240809-0900

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -716,6 +716,7 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
+deny 2a0c:2500:571:3b8:c078:bc86:be0d:bdce;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:c2c0:1:4::2;
@@ -731,8 +732,6 @@ deny 2a0e:fa00:0:1b::1;
 deny 2a0f:5f40:1000:435::8f;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:93c1:26:1f2::9ce5;
-deny 2a0f:9400:7e11:89c::1;
-deny 2a0f:9400:7e11:b852::1;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
 deny 2a0f:df00:0:255::196;
