--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1663,6 +1663,7 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
+allow 2a0c:2500:571:3b8:c078:bc86:be0d:bdce;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:c2c0:1:4::2;
@@ -1678,8 +1679,6 @@ allow 2a0e:fa00:0:1b::1;
 allow 2a0f:5f40:1000:435::8f;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
-allow 2a0f:9400:7e11:89c::1;
-allow 2a0f:9400:7e11:b852::1;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
@@ -1848,6 +1847,7 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 52.205.64.13;
 allow 5.255.100.219;
 allow 5.255.100.26;
 allow 5.255.101.10;
@@ -1877,7 +1877,6 @@ allow 5.2.67.226;
 allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
-allow 54.208.132.168;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
@@ -1938,7 +1937,6 @@ allow 81.17.20.58;
 allow 81.17.20.59;
 allow 81.17.20.60;
 allow 81.17.28.95;
-allow 82.153.138.119;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.139.190;
@@ -1951,6 +1949,7 @@ allow 84.16.224.227;
 allow 84.211.225.54;
 allow 84.239.46.144;
 allow 84.252.120.163;
+allow 84.252.122.44;
 allow 85.17.9.83;
 allow 85.204.116.92;
 allow 85.204.116.93;
@@ -1977,7 +1976,6 @@ allow 89.147.111.124;
 allow 89.147.111.87;
 allow 89.185.85.140;
 allow 89.187.143.31;
-allow 89.213.174.248;
 allow 89.234.157.254;
 allow 89.236.112.100;
 allow 89.36.231.128;
@@ -2033,12 +2031,7 @@ allow 94.16.116.81;
 allow 94.16.116.86;
 allow 94.16.121.226;
 allow 94.16.121.91;
-allow 94.177.106.247;
-allow 94.177.106.37;
-allow 94.177.106.46;
-allow 94.177.106.54;
 allow 94.177.106.55;
-allow 94.177.106.59;
 allow 94.228.163.25;
 allow 94.228.169.70;
 allow 94.230.208.147;
