--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -1663,6 +1663,7 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
+deny 2a0c:2500:571:3b8:c078:bc86:be0d:bdce;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:c2c0:1:4::2;
@@ -1678,8 +1679,6 @@ deny 2a0e:fa00:0:1b::1;
 deny 2a0f:5f40:1000:435::8f;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:93c1:26:1f2::9ce5;
-deny 2a0f:9400:7e11:89c::1;
-deny 2a0f:9400:7e11:b852::1;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
 deny 2a0f:df00:0:255::196;
@@ -1848,6 +1847,7 @@ deny 51.89.153.112;
 deny 51.91.18.151;
 deny 5.196.8.113;
 deny 5.196.95.34;
+deny 52.205.64.13;
 deny 5.255.100.219;
 deny 5.255.100.26;
 deny 5.255.101.10;
@@ -1877,7 +1877,6 @@ deny 5.2.67.226;
 deny 5.2.72.110;
 deny 5.2.79.179;
 deny 5.2.79.190;
-deny 54.208.132.168;
 deny 5.42.80.232;
 deny 5.42.80.233;
 deny 5.42.80.234;
@@ -1938,7 +1937,6 @@ deny 81.17.20.58;
 deny 81.17.20.59;
 deny 81.17.20.60;
 deny 81.17.28.95;
-deny 82.153.138.119;
 deny 82.221.128.191;
 deny 82.221.131.5;
 deny 82.221.139.190;
@@ -1951,6 +1949,7 @@ deny 84.16.224.227;
 deny 84.211.225.54;
 deny 84.239.46.144;
 deny 84.252.120.163;
+deny 84.252.122.44;
 deny 85.17.9.83;
 deny 85.204.116.92;
 deny 85.204.116.93;
@@ -1977,7 +1976,6 @@ deny 89.147.111.124;
 deny 89.147.111.87;
 deny 89.185.85.140;
 deny 89.187.143.31;
-deny 89.213.174.248;
 deny 89.234.157.254;
 deny 89.236.112.100;
 deny 89.36.231.128;
@@ -2033,12 +2031,7 @@ deny 94.16.116.81;
 deny 94.16.116.86;
 deny 94.16.121.226;
 deny 94.16.121.91;
-deny 94.177.106.247;
-deny 94.177.106.37;
-deny 94.177.106.46;
-deny 94.177.106.54;
 deny 94.177.106.55;
-deny 94.177.106.59;
 deny 94.228.163.25;
 deny 94.228.169.70;
 deny 94.230.208.147;
