--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -131,6 +131,7 @@ deny 139.162.249.209;
 deny 139.99.172.11;
 deny 139.99.184.245;
 deny 139.99.8.57;
+deny 141.239.146.142;
 deny 141.95.59.93;
 deny 141.98.11.62;
 deny 141.98.119.106;
@@ -219,6 +220,8 @@ deny 178.17.174.14;
 deny 178.17.174.164;
 deny 178.175.131.141;
 deny 178.175.142.26;
+deny 178.175.148.107;
+deny 178.175.148.108;
 deny 178.175.148.209;
 deny 178.20.55.16;
 deny 178.20.55.182;
@@ -271,6 +274,17 @@ deny 185.112.144.11;
 deny 185.112.146.167;
 deny 185.113.128.30;
 deny 185.126.117.21;
+deny 185.129.61.1;
+deny 185.129.61.10;
+deny 185.129.61.129;
+deny 185.129.61.2;
+deny 185.129.61.3;
+deny 185.129.61.4;
+deny 185.129.61.5;
+deny 185.129.61.6;
+deny 185.129.61.7;
+deny 185.129.61.8;
+deny 185.129.61.9;
 deny 185.129.62.62;
 deny 185.129.62.63;
 deny 185.130.44.108;
@@ -295,6 +309,7 @@ deny 185.181.61.142;
 deny 185.183.157.214;
 deny 185.183.159.40;
 deny 185.191.204.254;
+deny 185.193.125.105;
 deny 185.193.158.134;
 deny 185.193.52.180;
 deny 185.195.71.10;
@@ -487,6 +502,7 @@ deny 185.225.69.203;
 deny 185.225.69.232;
 deny 185.227.134.106;
 deny 185.227.68.78;
+deny 185.230.161.5;
 deny 185.233.100.23;
 deny 185.241.208.115;
 deny 185.241.208.196;
@@ -780,6 +796,17 @@ deny 2001:67c:6ec:203:218:33ff:fe44:5525;
 deny 2001:67c:6ec:203:218:33ff:fe44:5526;
 deny 2001:67c:6ec:203:218:33ff:fe44:5527;
 deny 2001:67c:6ec:203:218:33ff:fe44:5528;
+deny 2001:67c:89c:666::1;
+deny 2001:67c:89c:702:1ce:1ce:babe:1;
+deny 2001:67c:89c:702:1ce:1ce:babe:10;
+deny 2001:67c:89c:702:1ce:1ce:babe:2;
+deny 2001:67c:89c:702:1ce:1ce:babe:3;
+deny 2001:67c:89c:702:1ce:1ce:babe:4;
+deny 2001:67c:89c:702:1ce:1ce:babe:5;
+deny 2001:67c:89c:702:1ce:1ce:babe:6;
+deny 2001:67c:89c:702:1ce:1ce:babe:7;
+deny 2001:67c:89c:702:1ce:1ce:babe:8;
+deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
 deny 2001:ac8:22:43::20e5:a7d7;
@@ -1364,7 +1391,9 @@ deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:73::a568;
+deny 2a00:1dc0:caff:83::2c47;
 deny 2a00:1dc0:caff:8b::24bd;
+deny 2a00:1dc0:caff:b3::b759;
 deny 2a00:99a0:0:1000::2;
 deny 2a01:4262:1ab:ffff::133;
 deny 2a01:5e0:36:cf2a::1;
@@ -1494,6 +1523,7 @@ deny 2a07:b242:1000:1300:f250:8f0a:cdba:4d76;
 deny 2a07:e01:2:13::2;
 deny 2a07:e03:2a::bcde;
 deny 2a09:6301:0:2e1:b492:c29e:f532:42c6;
+deny 2a0a:3840:1337:125:0:b9c1:7d69:1337;
 deny 2a0a:3840:8078:27:0:504e:1b42:1337;
 deny 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 deny 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
@@ -1663,7 +1693,12 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
+deny 2a0c:16c2:500:130::786b;
+deny 2a0c:16c2:500:131::2bd3;
+deny 2a0c:16c2:500:132::7b5d;
+deny 2a0c:2500:571:3b8:7843:ef93:cb81:a913;
 deny 2a0c:2500:571:3b8:c078:bc86:be0d:bdce;
+deny 2a0c:2500:571:3b8:d16c:c69d:dcf5:a8f6;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:c2c0:1:4::2;
@@ -1679,6 +1714,8 @@ deny 2a0e:fa00:0:1b::1;
 deny 2a0f:5f40:1000:435::8f;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:93c1:26:1f2::9ce5;
+deny 2a0f:9400:7e11:89c::1;
+deny 2a0f:9400:7e11:b852::1;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
 deny 2a0f:df00:0:255::196;
@@ -1719,9 +1756,11 @@ deny 2a12:a800:2:1:45:138:16:178;
 deny 2a12:bec4:11d3:de9f::1;
 deny 2a12:d8c0:109a:9001::7;
 deny 31.129.22.65;
+deny 31.13.195.60;
 deny 31.133.0.210;
 deny 31.220.75.237;
 deny 31.42.185.134;
+deny 3.211.211.248;
 deny 35.0.127.52;
 deny 37.114.41.119;
 deny 37.1.201.144;
@@ -1847,7 +1886,6 @@ deny 51.89.153.112;
 deny 51.91.18.151;
 deny 5.196.8.113;
 deny 5.196.95.34;
-deny 52.205.64.13;
 deny 5.255.100.219;
 deny 5.255.100.26;
 deny 5.255.101.10;
@@ -1937,6 +1975,11 @@ deny 81.17.20.58;
 deny 81.17.20.59;
 deny 81.17.20.60;
 deny 81.17.28.95;
+deny 82.115.5.145;
+deny 82.115.5.146;
+deny 82.115.5.147;
+deny 82.118.242.62;
+deny 82.153.138.119;
 deny 82.221.128.191;
 deny 82.221.131.5;
 deny 82.221.139.190;
@@ -1949,6 +1992,7 @@ deny 84.16.224.227;
 deny 84.211.225.54;
 deny 84.239.46.144;
 deny 84.252.120.163;
+deny 84.252.121.55;
 deny 84.252.122.44;
 deny 85.17.9.83;
 deny 85.204.116.92;
@@ -1956,12 +2000,14 @@ deny 85.204.116.93;
 deny 85.239.41.130;
 deny 85.93.218.204;
 deny 86.104.75.99;
+deny 86.205.5.107;
 deny 87.118.110.27;
 deny 87.118.116.103;
 deny 87.118.116.90;
 deny 87.118.122.30;
 deny 87.118.122.51;
 deny 87.120.254.132;
+deny 87.120.254.192;
 deny 87.120.8.136;
 deny 88.209.197.213;
 deny 88.80.20.86;
@@ -1976,6 +2022,7 @@ deny 89.147.111.124;
 deny 89.147.111.87;
 deny 89.185.85.140;
 deny 89.187.143.31;
+deny 89.213.174.248;
 deny 89.234.157.254;
 deny 89.236.112.100;
 deny 89.36.231.128;
@@ -2005,11 +2052,12 @@ deny 91.227.77.199;
 deny 91.92.109.126;
 deny 91.92.109.43;
 deny 91.92.241.22;
-deny 92.133.238.108;
 deny 92.243.24.163;
 deny 92.246.138.145;
 deny 92.246.84.133;
 deny 93.123.12.112;
+deny 93.123.12.164;
+deny 93.123.12.240;
 deny 93.157.106.177;
 deny 93.90.74.31;
 deny 93.95.225.141;
@@ -2031,7 +2079,12 @@ deny 94.16.116.81;
 deny 94.16.116.86;
 deny 94.16.121.226;
 deny 94.16.121.91;
+deny 94.177.106.247;
+deny 94.177.106.37;
+deny 94.177.106.46;
+deny 94.177.106.54;
 deny 94.177.106.55;
+deny 94.177.106.59;
 deny 94.228.163.25;
 deny 94.228.169.70;
 deny 94.230.208.147;
