--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -96,6 +96,17 @@ deny 2001:67c:6ec:203:218:33ff:fe44:5525;
 deny 2001:67c:6ec:203:218:33ff:fe44:5526;
 deny 2001:67c:6ec:203:218:33ff:fe44:5527;
 deny 2001:67c:6ec:203:218:33ff:fe44:5528;
+deny 2001:67c:89c:666::1;
+deny 2001:67c:89c:702:1ce:1ce:babe:1;
+deny 2001:67c:89c:702:1ce:1ce:babe:10;
+deny 2001:67c:89c:702:1ce:1ce:babe:2;
+deny 2001:67c:89c:702:1ce:1ce:babe:3;
+deny 2001:67c:89c:702:1ce:1ce:babe:4;
+deny 2001:67c:89c:702:1ce:1ce:babe:5;
+deny 2001:67c:89c:702:1ce:1ce:babe:6;
+deny 2001:67c:89c:702:1ce:1ce:babe:7;
+deny 2001:67c:89c:702:1ce:1ce:babe:8;
+deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
 deny 2001:ac8:22:43::20e5:a7d7;
@@ -417,7 +428,9 @@ deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:73::a568;
+deny 2a00:1dc0:caff:83::2c47;
 deny 2a00:1dc0:caff:8b::24bd;
+deny 2a00:1dc0:caff:b3::b759;
 deny 2a00:99a0:0:1000::2;
 deny 2a01:4262:1ab:ffff::133;
 deny 2a01:5e0:36:cf2a::1;
@@ -547,6 +560,7 @@ deny 2a07:b242:1000:1300:f250:8f0a:cdba:4d76;
 deny 2a07:e01:2:13::2;
 deny 2a07:e03:2a::bcde;
 deny 2a09:6301:0:2e1:b492:c29e:f532:42c6;
+deny 2a0a:3840:1337:125:0:b9c1:7d69:1337;
 deny 2a0a:3840:8078:27:0:504e:1b42:1337;
 deny 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 deny 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
@@ -716,7 +730,12 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
+deny 2a0c:16c2:500:130::786b;
+deny 2a0c:16c2:500:131::2bd3;
+deny 2a0c:16c2:500:132::7b5d;
+deny 2a0c:2500:571:3b8:7843:ef93:cb81:a913;
 deny 2a0c:2500:571:3b8:c078:bc86:be0d:bdce;
+deny 2a0c:2500:571:3b8:d16c:c69d:dcf5:a8f6;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:c2c0:1:4::2;
@@ -732,6 +751,8 @@ deny 2a0e:fa00:0:1b::1;
 deny 2a0f:5f40:1000:435::8f;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:93c1:26:1f2::9ce5;
+deny 2a0f:9400:7e11:89c::1;
+deny 2a0f:9400:7e11:b852::1;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
 deny 2a0f:df00:0:255::196;
