--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -131,6 +131,7 @@ set_real_ip_from 139.162.249.209;
 set_real_ip_from 139.99.172.11;
 set_real_ip_from 139.99.184.245;
 set_real_ip_from 139.99.8.57;
+set_real_ip_from 141.239.146.142;
 set_real_ip_from 141.95.59.93;
 set_real_ip_from 141.98.11.62;
 set_real_ip_from 141.98.119.106;
@@ -219,6 +220,8 @@ set_real_ip_from 178.17.174.14;
 set_real_ip_from 178.17.174.164;
 set_real_ip_from 178.175.131.141;
 set_real_ip_from 178.175.142.26;
+set_real_ip_from 178.175.148.107;
+set_real_ip_from 178.175.148.108;
 set_real_ip_from 178.175.148.209;
 set_real_ip_from 178.20.55.16;
 set_real_ip_from 178.20.55.182;
@@ -271,6 +274,17 @@ set_real_ip_from 185.112.144.11;
 set_real_ip_from 185.112.146.167;
 set_real_ip_from 185.113.128.30;
 set_real_ip_from 185.126.117.21;
+set_real_ip_from 185.129.61.1;
+set_real_ip_from 185.129.61.10;
+set_real_ip_from 185.129.61.129;
+set_real_ip_from 185.129.61.2;
+set_real_ip_from 185.129.61.3;
+set_real_ip_from 185.129.61.4;
+set_real_ip_from 185.129.61.5;
+set_real_ip_from 185.129.61.6;
+set_real_ip_from 185.129.61.7;
+set_real_ip_from 185.129.61.8;
+set_real_ip_from 185.129.61.9;
 set_real_ip_from 185.129.62.62;
 set_real_ip_from 185.129.62.63;
 set_real_ip_from 185.130.44.108;
@@ -295,6 +309,7 @@ set_real_ip_from 185.181.61.142;
 set_real_ip_from 185.183.157.214;
 set_real_ip_from 185.183.159.40;
 set_real_ip_from 185.191.204.254;
+set_real_ip_from 185.193.125.105;
 set_real_ip_from 185.193.158.134;
 set_real_ip_from 185.193.52.180;
 set_real_ip_from 185.195.71.10;
@@ -487,6 +502,7 @@ set_real_ip_from 185.225.69.203;
 set_real_ip_from 185.225.69.232;
 set_real_ip_from 185.227.134.106;
 set_real_ip_from 185.227.68.78;
+set_real_ip_from 185.230.161.5;
 set_real_ip_from 185.233.100.23;
 set_real_ip_from 185.241.208.115;
 set_real_ip_from 185.241.208.196;
@@ -780,6 +796,17 @@ set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5525;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5526;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5527;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5528;
+set_real_ip_from 2001:67c:89c:666::1;
+set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:1;
+set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:10;
+set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:2;
+set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:3;
+set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:4;
+set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:5;
+set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:6;
+set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:7;
+set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:8;
+set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:780:107:b::85;
 set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
@@ -1364,7 +1391,9 @@ set_real_ip_from 2a00:1b88:4::4;
 set_real_ip_from 2a00:1dc0:caff:138::94d2;
 set_real_ip_from 2a00:1dc0:caff:15::45dc;
 set_real_ip_from 2a00:1dc0:caff:73::a568;
+set_real_ip_from 2a00:1dc0:caff:83::2c47;
 set_real_ip_from 2a00:1dc0:caff:8b::24bd;
+set_real_ip_from 2a00:1dc0:caff:b3::b759;
 set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a01:4262:1ab:ffff::133;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
@@ -1494,6 +1523,7 @@ set_real_ip_from 2a07:b242:1000:1300:f250:8f0a:cdba:4d76;
 set_real_ip_from 2a07:e01:2:13::2;
 set_real_ip_from 2a07:e03:2a::bcde;
 set_real_ip_from 2a09:6301:0:2e1:b492:c29e:f532:42c6;
+set_real_ip_from 2a0a:3840:1337:125:0:b9c1:7d69:1337;
 set_real_ip_from 2a0a:3840:8078:27:0:504e:1b42:1337;
 set_real_ip_from 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 set_real_ip_from 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
@@ -1663,7 +1693,12 @@ set_real_ip_from 2a0b:f4c2::6;
 set_real_ip_from 2a0b:f4c2::7;
 set_real_ip_from 2a0b:f4c2::8;
 set_real_ip_from 2a0b:f4c2::9;
+set_real_ip_from 2a0c:16c2:500:130::786b;
+set_real_ip_from 2a0c:16c2:500:131::2bd3;
+set_real_ip_from 2a0c:16c2:500:132::7b5d;
+set_real_ip_from 2a0c:2500:571:3b8:7843:ef93:cb81:a913;
 set_real_ip_from 2a0c:2500:571:3b8:c078:bc86:be0d:bdce;
+set_real_ip_from 2a0c:2500:571:3b8:d16c:c69d:dcf5:a8f6;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
 set_real_ip_from 2a0d:c2c0:1:4::2;
@@ -1679,6 +1714,8 @@ set_real_ip_from 2a0e:fa00:0:1b::1;
 set_real_ip_from 2a0f:5f40:1000:435::8f;
 set_real_ip_from 2a0f:85c1:356:3238::1;
 set_real_ip_from 2a0f:93c1:26:1f2::9ce5;
+set_real_ip_from 2a0f:9400:7e11:89c::1;
+set_real_ip_from 2a0f:9400:7e11:b852::1;
 set_real_ip_from 2a0f:df00:0:255::194;
 set_real_ip_from 2a0f:df00:0:255::195;
 set_real_ip_from 2a0f:df00:0:255::196;
@@ -1719,9 +1756,11 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:178;
 set_real_ip_from 2a12:bec4:11d3:de9f::1;
 set_real_ip_from 2a12:d8c0:109a:9001::7;
 set_real_ip_from 31.129.22.65;
+set_real_ip_from 31.13.195.60;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.42.185.134;
+set_real_ip_from 3.211.211.248;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.41.119;
 set_real_ip_from 37.1.201.144;
@@ -1847,7 +1886,6 @@ set_real_ip_from 51.89.153.112;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
-set_real_ip_from 52.205.64.13;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
@@ -1937,6 +1975,11 @@ set_real_ip_from 81.17.20.58;
 set_real_ip_from 81.17.20.59;
 set_real_ip_from 81.17.20.60;
 set_real_ip_from 81.17.28.95;
+set_real_ip_from 82.115.5.145;
+set_real_ip_from 82.115.5.146;
+set_real_ip_from 82.115.5.147;
+set_real_ip_from 82.118.242.62;
+set_real_ip_from 82.153.138.119;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
 set_real_ip_from 82.221.139.190;
@@ -1949,6 +1992,7 @@ set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.211.225.54;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 84.252.120.163;
+set_real_ip_from 84.252.121.55;
 set_real_ip_from 84.252.122.44;
 set_real_ip_from 85.17.9.83;
 set_real_ip_from 85.204.116.92;
@@ -1956,12 +2000,14 @@ set_real_ip_from 85.204.116.93;
 set_real_ip_from 85.239.41.130;
 set_real_ip_from 85.93.218.204;
 set_real_ip_from 86.104.75.99;
+set_real_ip_from 86.205.5.107;
 set_real_ip_from 87.118.110.27;
 set_real_ip_from 87.118.116.103;
 set_real_ip_from 87.118.116.90;
 set_real_ip_from 87.118.122.30;
 set_real_ip_from 87.118.122.51;
 set_real_ip_from 87.120.254.132;
+set_real_ip_from 87.120.254.192;
 set_real_ip_from 87.120.8.136;
 set_real_ip_from 88.209.197.213;
 set_real_ip_from 88.80.20.86;
@@ -1976,6 +2022,7 @@ set_real_ip_from 89.147.111.124;
 set_real_ip_from 89.147.111.87;
 set_real_ip_from 89.185.85.140;
 set_real_ip_from 89.187.143.31;
+set_real_ip_from 89.213.174.248;
 set_real_ip_from 89.234.157.254;
 set_real_ip_from 89.236.112.100;
 set_real_ip_from 89.36.231.128;
@@ -2005,11 +2052,12 @@ set_real_ip_from 91.227.77.199;
 set_real_ip_from 91.92.109.126;
 set_real_ip_from 91.92.109.43;
 set_real_ip_from 91.92.241.22;
-set_real_ip_from 92.133.238.108;
 set_real_ip_from 92.243.24.163;
 set_real_ip_from 92.246.138.145;
 set_real_ip_from 92.246.84.133;
 set_real_ip_from 93.123.12.112;
+set_real_ip_from 93.123.12.164;
+set_real_ip_from 93.123.12.240;
 set_real_ip_from 93.157.106.177;
 set_real_ip_from 93.90.74.31;
 set_real_ip_from 93.95.225.141;
@@ -2031,7 +2079,12 @@ set_real_ip_from 94.16.116.81;
 set_real_ip_from 94.16.116.86;
 set_real_ip_from 94.16.121.226;
 set_real_ip_from 94.16.121.91;
+set_real_ip_from 94.177.106.247;
+set_real_ip_from 94.177.106.37;
+set_real_ip_from 94.177.106.46;
+set_real_ip_from 94.177.106.54;
 set_real_ip_from 94.177.106.55;
+set_real_ip_from 94.177.106.59;
 set_real_ip_from 94.228.163.25;
 set_real_ip_from 94.228.169.70;
 set_real_ip_from 94.230.208.147;
