Update lists at 20240809-1800

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -151,7 +151,6 @@ deny 147.45.49.17;
 deny 147.45.78.34;
 deny 148.113.152.91;
 deny 149.202.79.101;
-deny 149.202.79.129;
 deny 149.56.22.133;
 deny 149.56.44.47;
 deny 151.80.148.159;
@@ -1087,7 +1086,6 @@ deny 2.58.56.35;
 deny 2.58.56.43;
 deny 2.58.56.90;
 deny 2600:3c00::f03c:91ff:fe73:f9ba;
-deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:93ff:fe2b:34f6;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:92ff:fed8:d9ef;
@@ -1480,6 +1478,7 @@ deny 2a04:52c0:104:fe02::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:108:a34f::1;
+deny 2a04:52c0:113:2b92::1;
 deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:119:3f0b::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
@@ -1709,7 +1708,6 @@ deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:ed78:7632;
 deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:1b::1;
-deny 2a0f:5f40:1000:435::8f;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:93c1:26:1f2::9ce5;
 deny 2a0f:9400:7e11:89c::1;
@@ -1885,10 +1883,10 @@ deny 51.91.18.151;
 deny 5.196.8.113;
 deny 5.196.95.34;
 deny 5.255.100.219;
-deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.103.235;
 deny 5.255.104.202;
+deny 5.255.108.103;
 deny 5.255.111.64;
 deny 5.255.114.171;
 deny 5.255.115.143;
@@ -1913,7 +1911,7 @@ deny 5.2.67.226;
 deny 5.2.72.110;
 deny 5.2.79.179;
 deny 5.2.79.190;
-deny 54.174.189.147;
+deny 54.209.37.97;
 deny 5.42.80.232;
 deny 5.42.80.233;
 deny 5.42.80.234;
@@ -1939,7 +1937,6 @@ deny 66.78.40.182;
 deny 67.219.109.141;
 deny 71.19.144.106;
 deny 71.19.144.222;
-deny 72.14.179.10;
 deny 72.211.49.235;
 deny 74.82.47.194;
 deny 77.220.196.253;
@@ -2056,7 +2053,6 @@ deny 92.246.84.133;
 deny 93.123.12.112;
 deny 93.123.12.164;
 deny 93.123.12.240;
-deny 93.157.106.177;
 deny 93.90.74.31;
 deny 93.95.225.141;
 deny 93.95.228.125;
