--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -151,7 +151,6 @@ allow 147.45.49.17;
 allow 147.45.78.34;
 allow 148.113.152.91;
 allow 149.202.79.101;
-allow 149.202.79.129;
 allow 149.56.22.133;
 allow 149.56.44.47;
 allow 151.80.148.159;
@@ -1087,7 +1086,6 @@ allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2.58.56.90;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
-allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:93ff:fe2b:34f6;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:92ff:fed8:d9ef;
@@ -1480,6 +1478,7 @@ allow 2a04:52c0:104:fe02::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:a34f::1;
+allow 2a04:52c0:113:2b92::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:119:3f0b::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
@@ -1709,7 +1708,6 @@ allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:ed78:7632;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:1b::1;
-allow 2a0f:5f40:1000:435::8f;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:9400:7e11:89c::1;
@@ -1885,10 +1883,10 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
+allow 5.255.108.103;
 allow 5.255.111.64;
 allow 5.255.114.171;
 allow 5.255.115.143;
@@ -1913,7 +1911,7 @@ allow 5.2.67.226;
 allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
-allow 54.174.189.147;
+allow 54.209.37.97;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
@@ -1939,7 +1937,6 @@ allow 66.78.40.182;
 allow 67.219.109.141;
 allow 71.19.144.106;
 allow 71.19.144.222;
-allow 72.14.179.10;
 allow 72.211.49.235;
 allow 74.82.47.194;
 allow 77.220.196.253;
@@ -2056,7 +2053,6 @@ allow 92.246.84.133;
 allow 93.123.12.112;
 allow 93.123.12.164;
 allow 93.123.12.240;
-allow 93.157.106.177;
 allow 93.90.74.31;
 allow 93.95.225.141;
 allow 93.95.228.125;
