--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -194,6 +194,7 @@ set_real_ip_from 2605:6400:30:ebb6:532:acc:65:31;
 set_real_ip_from 2605:6400:30:ed0c:b477:4972:756a:2f42;
 set_real_ip_from 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 set_real_ip_from 2605:6400:30:efba:dead::;
+set_real_ip_from 2605:6400:30:f0ed:9151:66ed:6366:5c74;
 set_real_ip_from 2605:6400:30:f174::;
 set_real_ip_from 2605:6400:30:f174:1:1:1:1;
 set_real_ip_from 2605:6400:30:f174:1111:2222:3333:4444;
@@ -214,6 +215,7 @@ set_real_ip_from 2605:6400:30:f307:ff42:3928:c777:8563;
 set_real_ip_from 2605:6400:30:f32b:7417:ea33:425b:9732;
 set_real_ip_from 2605:6400:30:f32b:8fec:4251:d9d1:1ff5;
 set_real_ip_from 2605:6400:30:f32b:c191:e73e:8bd5:9c61;
+set_real_ip_from 2605:6400:30:f330:61ea:72a8:8aea:fa1f;
 set_real_ip_from 2605:6400:30:f38b:28b3:cd24:51f3:e412;
 set_real_ip_from 2605:6400:30:f414:42ce:c612:dab8:1337;
 set_real_ip_from 2605:6400:30:f440:757e:adf1:55f7:5a31;
@@ -236,6 +238,7 @@ set_real_ip_from 2605:6400:30:f858:2704:73e1:7085:12ef;
 set_real_ip_from 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 set_real_ip_from 2605:6400:30:f8d5::1;
 set_real_ip_from 2605:6400:30:f8da:2b2:a293:30ad:506d;
+set_real_ip_from 2605:6400:30:f920:f523:28ef:3617:8b86;
 set_real_ip_from 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 set_real_ip_from 2605:6400:40:fe09::2;
 set_real_ip_from 2605:6400:d814:1b8::4;
@@ -419,6 +422,7 @@ set_real_ip_from 2a00:1b88:4::4;
 set_real_ip_from 2a00:1dc0:caff:138::94d2;
 set_real_ip_from 2a00:1dc0:caff:15::45dc;
 set_real_ip_from 2a00:1dc0:caff:73::a568;
+set_real_ip_from 2a00:1dc0:caff:83::2c47;
 set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:1dc0:caff:b3::b759;
 set_real_ip_from 2a00:99a0:0:1000::2;
