Update lists at 20240811-1500

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,3 +1,4 @@
+allow 100.25.1.163;
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
@@ -131,7 +132,6 @@ allow 141.239.146.142;
 allow 141.95.59.93;
 allow 141.98.11.62;
 allow 141.98.119.106;
-allow 142.171.12.88;
 allow 142.44.133.81;
 allow 142.44.234.69;
 allow 143.110.156.176;
@@ -642,7 +642,6 @@ allow 193.26.115.43;
 allow 193.26.115.61;
 allow 193.41.226.117;
 allow 193.70.80.213;
-allow 194.126.174.126;
 allow 194.15.112.133;
 allow 194.15.113.118;
 allow 194.15.115.212;
@@ -1217,7 +1216,6 @@ allow 2607:5300:205:200::4894;
 allow 2607:5300:60:566f::1;
 allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
-allow 2607:f130:0:ed:216:3cff:febd:3b42;
 allow 2620:18c:0:192::131;
 allow 2620:18c:0:192::132;
 allow 2620:18c:0:192::133;
@@ -1399,6 +1397,7 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
 allow 2a02:25b0:aaaa:5258::;
+allow 2a02:25b0:aaaa:d2a8::;
 allow 2a02:2970:1001::4b;
 allow 2a02:29b8:dc01:1801:42:51ff:fe11:143a;
 allow 2a02:29b8:dc01:1801:42:51ff:fe11:143b;
@@ -1713,8 +1712,6 @@ allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:1b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
-allow 2a0f:9400:7e11:89c::1;
-allow 2a0f:9400:7e11:b852::1;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
@@ -1759,7 +1756,6 @@ allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.220.75.237;
 allow 31.42.185.134;
-allow 34.230.124.14;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.1.201.144;
@@ -1861,6 +1857,7 @@ allow 46.165.243.36;
 allow 46.182.21.248;
 allow 46.232.251.191;
 allow 46.234.47.105;
+allow 46.36.36.125;
 allow 46.36.38.151;
 allow 46.38.255.27;
 allow 47.250.38.29;
@@ -1982,8 +1979,6 @@ allow 82.115.5.145;
 allow 82.115.5.146;
 allow 82.115.5.147;
 allow 82.118.242.62;
-allow 82.153.138.119;
-allow 82.153.138.81;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.139.190;
@@ -2026,7 +2021,6 @@ allow 89.147.111.124;
 allow 89.147.111.87;
 allow 89.185.85.140;
 allow 89.187.143.31;
-allow 89.213.174.248;
 allow 89.234.157.254;
 allow 89.236.112.100;
 allow 89.36.231.128;
@@ -2081,12 +2075,6 @@ allow 94.16.116.81;
 allow 94.16.116.86;
 allow 94.16.121.226;
 allow 94.16.121.91;
-allow 94.177.106.247;
-allow 94.177.106.37;
-allow 94.177.106.46;
-allow 94.177.106.54;
-allow 94.177.106.55;
-allow 94.177.106.59;
 allow 94.228.163.25;
 allow 94.228.169.70;
 allow 94.230.208.147;
