--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -257,7 +257,6 @@ deny 2607:5300:205:200::4894;
 deny 2607:5300:60:566f::1;
 deny 2607:5300:61:785::;
 deny 2607:5300:61:785:1:2:3:4;
-deny 2607:f130:0:ed:216:3cff:febd:3b42;
 deny 2620:18c:0:192::131;
 deny 2620:18c:0:192::132;
 deny 2620:18c:0:192::133;
@@ -438,6 +437,7 @@ deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:16d0:0:5::1;
 deny 2a02:25b0:aaaa:5258::;
+deny 2a02:25b0:aaaa:d2a8::;
 deny 2a02:2970:1001::4b;
 deny 2a02:29b8:dc01:1801:42:51ff:fe11:143a;
 deny 2a02:29b8:dc01:1801:42:51ff:fe11:143b;
@@ -752,8 +752,6 @@ deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:1b::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:93c1:26:1f2::9ce5;
-deny 2a0f:9400:7e11:89c::1;
-deny 2a0f:9400:7e11:b852::1;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
 deny 2a0f:df00:0:255::196;
