Update lists at 20240811-2100

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -120,6 +120,7 @@ allow 125.212.241.131;
 allow 128.127.180.156;
 allow 128.31.0.13;
 allow 130.193.15.186;
+allow 134.17.4.179;
 allow 135.125.205.25;
 allow 136.244.111.163;
 allow 138.59.18.110;
@@ -243,7 +244,6 @@ allow 180.150.226.99;
 allow 181.41.143.180;
 allow 181.41.143.240;
 allow 181.41.143.241;
-allow 18.235.215.35;
 allow 184.105.48.40;
 allow 184.75.221.107;
 allow 185.100.85.132;
@@ -294,6 +294,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -1068,6 +1069,7 @@ allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
 allow 23.155.8.104;
+allow 23.236.122.62;
 allow 23.94.211.25;
 allow 2400:6180:100:d0::2c:3001;
 allow 2400:8901::f03c:93ff:fe68:23b3;
@@ -1397,6 +1399,7 @@ allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
+allow 2a02:220f:2001:2600:2a0:98ff:fe4f:cd57;
 allow 2a02:25b0:aaaa:5258::;
 allow 2a02:25b0:aaaa:d2a8::;
 allow 2a02:2970:1001::4b;
@@ -1915,6 +1918,7 @@ allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
 allow 5.2.67.226;
+allow 52.71.67.49;
 allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
