--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -437,6 +437,7 @@ deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:16d0:0:5::1;
+deny 2a02:220f:2001:2600:2a0:98ff:fe4f:cd57;
 deny 2a02:25b0:aaaa:5258::;
 deny 2a02:25b0:aaaa:d2a8::;
 deny 2a02:2970:1001::4b;
