Update lists at 20240812-0300

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -120,6 +120,7 @@ allow 125.212.241.131;
 allow 128.127.180.156;
 allow 128.31.0.13;
 allow 130.193.15.186;
+allow 134.17.4.179;
 allow 135.125.205.25;
 allow 136.244.111.163;
 allow 138.59.18.110;
@@ -1398,6 +1399,7 @@ allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
+allow 2a02:220f:2001:2600:2a0:98ff:fe4f:cd57;
 allow 2a02:25b0:aaaa:5258::;
 allow 2a02:25b0:aaaa:d2a8::;
 allow 2a02:2970:1001::4b;
@@ -1760,6 +1762,7 @@ allow 31.133.0.210;
 allow 31.220.75.237;
 allow 31.42.185.134;
 allow 35.0.127.52;
+allow 35.153.221.91;
 allow 37.114.41.119;
 allow 37.1.201.144;
 allow 37.120.190.85;
@@ -1890,6 +1893,7 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1918,7 +1922,6 @@ allow 5.2.67.226;
 allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
-allow 54.158.236.253;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
