--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -120,6 +120,7 @@ deny 125.212.241.131;
 deny 128.127.180.156;
 deny 128.31.0.13;
 deny 130.193.15.186;
+deny 134.17.4.179;
 deny 135.125.205.25;
 deny 136.244.111.163;
 deny 138.59.18.110;
@@ -1398,6 +1399,7 @@ deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:16d0:0:5::1;
+deny 2a02:220f:2001:2600:2a0:98ff:fe4f:cd57;
 deny 2a02:25b0:aaaa:5258::;
 deny 2a02:25b0:aaaa:d2a8::;
 deny 2a02:2970:1001::4b;
@@ -1760,6 +1762,7 @@ deny 31.133.0.210;
 deny 31.220.75.237;
 deny 31.42.185.134;
 deny 35.0.127.52;
+deny 35.153.221.91;
 deny 37.114.41.119;
 deny 37.1.201.144;
 deny 37.120.190.85;
@@ -1890,6 +1893,7 @@ deny 51.91.18.151;
 deny 5.196.8.113;
 deny 5.196.95.34;
 deny 5.255.100.219;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.103.235;
 deny 5.255.104.202;
@@ -1918,7 +1922,6 @@ deny 5.2.67.226;
 deny 5.2.72.110;
 deny 5.2.79.179;
 deny 5.2.79.190;
-deny 54.158.236.253;
 deny 5.42.80.232;
 deny 5.42.80.233;
 deny 5.42.80.234;
