Update lists at 20240812-1200

--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -294,6 +294,7 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
@@ -1700,6 +1701,7 @@ set_real_ip_from 2a0c:16c2:500:132::7b5d;
 set_real_ip_from 2a0c:2500:571:3b8:7843:ef93:cb81:a913;
 set_real_ip_from 2a0c:2500:571:3b8:c078:bc86:be0d:bdce;
 set_real_ip_from 2a0c:2500:571:3b8:d16c:c69d:dcf5:a8f6;
+set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
 set_real_ip_from 2a0d:c2c0:1:4::2;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:132;
@@ -1759,7 +1761,7 @@ set_real_ip_from 31.13.195.60;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.42.185.134;
-set_real_ip_from 34.237.54.49;
+set_real_ip_from 34.235.64.33;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.41.119;
 set_real_ip_from 37.1.201.144;
@@ -1893,6 +1895,7 @@ set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
+set_real_ip_from 5.255.101.217;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
 set_real_ip_from 5.255.108.103;
@@ -2003,6 +2006,7 @@ set_real_ip_from 84.252.122.44;
 set_real_ip_from 85.17.9.83;
 set_real_ip_from 85.204.116.92;
 set_real_ip_from 85.204.116.93;
+set_real_ip_from 85.239.41.130;
 set_real_ip_from 85.93.218.204;
 set_real_ip_from 86.104.75.99;
 set_real_ip_from 86.205.5.107;
