--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -739,6 +739,7 @@ allow 2a0c:16c2:500:132::7b5d;
 allow 2a0c:2500:571:3b8:7843:ef93:cb81:a913;
 allow 2a0c:2500:571:3b8:c078:bc86:be0d:bdce;
 allow 2a0c:2500:571:3b8:d16c:c69d:dcf5:a8f6;
+allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:4005:1002:ffff:185:40:4:132;
