Update lists at 20240812-1800

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -546,6 +546,7 @@ allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
+allow 2a06:1700:0:193::100;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
