--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -216,6 +216,7 @@ allow 178.17.174.164;
 allow 178.175.131.141;
 allow 178.175.142.26;
 allow 178.175.148.107;
+allow 178.175.148.108;
 allow 178.175.148.209;
 allow 178.20.55.16;
 allow 178.20.55.182;
@@ -243,6 +244,7 @@ allow 180.150.226.99;
 allow 181.41.143.180;
 allow 181.41.143.240;
 allow 181.41.143.241;
+allow 18.211.122.21;
 allow 184.105.48.40;
 allow 184.75.221.107;
 allow 185.100.85.132;
@@ -293,7 +295,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -537,6 +538,7 @@ allow 185.42.170.203;
 allow 185.56.171.94;
 allow 185.56.83.83;
 allow 185.67.82.114;
+allow 185.7.33.146;
 allow 185.82.219.109;
 allow 185.84.31.254;
 allow 185.91.116.202;
@@ -818,7 +820,6 @@ allow 201.23.14.225;
 allow 201.23.16.249;
 allow 202.182.99.129;
 allow 202.61.226.98;
-allow 202.94.246.210;
 allow 204.137.14.104;
 allow 204.137.14.105;
 allow 204.137.14.106;
@@ -1392,6 +1393,7 @@ allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:83::2c47;
 allow 2a00:1dc0:caff:8b::24bd;
+allow 2a00:1dc0:caff:b3::b759;
 allow 2a00:99a0:0:1000::2;
 allow 2a01:4262:1ab:ffff::133;
 allow 2a01:5e0:36:cf2a::1;
@@ -1414,7 +1416,6 @@ allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
-allow 2a02:c206:2095:2624::1;
 allow 2a02:c207:3002:8283::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
@@ -1763,7 +1764,6 @@ allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.220.75.237;
 allow 31.42.185.134;
-allow 34.226.98.167;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.1.201.144;
@@ -1831,7 +1831,6 @@ allow 45.141.215.97;
 allow 45.148.10.111;
 allow 45.148.10.169;
 allow 45.150.108.229;
-allow 45.151.122.34;
 allow 45.15.157.177;
 allow 45.61.185.172;
 allow 45.61.186.203;
@@ -1890,6 +1889,7 @@ allow 5.182.86.212;
 allow 51.83.40.211;
 allow 51.89.145.143;
 allow 51.89.145.146;
+allow 51.89.145.157;
 allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
@@ -1900,6 +1900,7 @@ allow 5.255.101.10;
 allow 5.255.101.217;
 allow 5.255.103.235;
 allow 5.255.104.202;
+allow 5.255.105.234;
 allow 5.255.108.103;
 allow 5.255.111.64;
 allow 5.255.114.171;
@@ -1912,6 +1913,7 @@ allow 5.255.123.164;
 allow 5.255.124.150;
 allow 5.255.125.196;
 allow 5.255.125.41;
+allow 5.255.126.125;
 allow 5.255.127.222;
 allow 5.255.97.221;
 allow 5.255.98.151;
@@ -1994,6 +1996,8 @@ allow 82.118.242.62;
 allow 82.153.138.119;
 allow 82.221.128.191;
 allow 82.221.131.5;
+allow 82.221.139.190;
+allow 82.68.49.227;
 allow 82.85.247.254;
 allow 83.217.9.73;
 allow 83.96.213.63;
