--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -428,6 +428,7 @@ allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:83::2c47;
 allow 2a00:1dc0:caff:8b::24bd;
+allow 2a00:1dc0:caff:b3::b759;
 allow 2a00:99a0:0:1000::2;
 allow 2a01:4262:1ab:ffff::133;
 allow 2a01:5e0:36:cf2a::1;
@@ -450,7 +451,6 @@ allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
-allow 2a02:c206:2095:2624::1;
 allow 2a02:c207:3002:8283::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
