--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,10 +1,10 @@
-allow 100.28.147.114;
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
 allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.163.218.11;
+allow 103.164.54.199;
 allow 103.172.134.26;
 allow 103.193.179.233;
 allow 103.196.37.111;
@@ -163,6 +163,7 @@ allow 154.26.159.157;
 allow 154.30.210.35;
 allow 154.30.210.36;
 allow 154.30.210.37;
+allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.247.72.192;
@@ -174,10 +175,8 @@ allow 162.247.74.204;
 allow 162.247.74.206;
 allow 162.247.74.213;
 allow 162.247.74.216;
-allow 162.247.74.217;
 allow 162.247.74.27;
 allow 162.247.74.7;
-allow 162.247.74.74;
 allow 162.251.5.152;
 allow 163.172.45.102;
 allow 164.132.172.209;
@@ -216,8 +215,6 @@ allow 178.17.174.14;
 allow 178.17.174.164;
 allow 178.175.131.141;
 allow 178.175.142.26;
-allow 178.175.148.107;
-allow 178.175.148.108;
 allow 178.175.148.209;
 allow 178.20.55.16;
 allow 178.20.55.182;
@@ -675,7 +672,6 @@ allow 198.96.155.3;
 allow 198.98.48.31;
 allow 198.98.48.33;
 allow 198.98.48.35;
-allow 198.98.50.199;
 allow 198.98.50.215;
 allow 198.98.51.189;
 allow 198.98.51.249;
@@ -697,6 +693,7 @@ allow 199.195.253.124;
 allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
+allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4060:a01f::12a6;
 allow 2001:1af8:4700:a114:6::1;
@@ -1086,6 +1083,7 @@ allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
 allow 2402:1f00:8201:61::2d91:af20;
 allow 2402:1f00:8201:61::da05:d4c6;
+allow 2407:3640:2207:8882::1;
 allow 2.58.56.220;
 allow 2.58.56.248;
 allow 2.58.56.35;
@@ -1119,7 +1117,6 @@ allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
 allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
-allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1060:411f:41d8:11fe:716f;
 allow 2605:6400:10:12b:1877:e308:72b3:41b0;
 allow 2605:6400:10:1362::2;
@@ -1393,9 +1390,7 @@ allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:73::a568;
-allow 2a00:1dc0:caff:83::2c47;
 allow 2a00:1dc0:caff:8b::24bd;
-allow 2a00:1dc0:caff:b3::b759;
 allow 2a00:99a0:0:1000::2;
 allow 2a01:4262:1ab:ffff::133;
 allow 2a01:5e0:36:cf2a::1;
@@ -1761,7 +1756,6 @@ allow 2a12:a800:2:1:45:138:16:178;
 allow 2a12:bec4:11d3:de9f::1;
 allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
-allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.220.75.237;
 allow 31.42.185.134;
@@ -1786,6 +1780,7 @@ allow 37.46.211.24;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
+allow 44.215.187.89;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1997,6 +1992,7 @@ allow 82.118.242.62;
 allow 82.153.138.119;
 allow 82.221.128.191;
 allow 82.221.131.5;
+allow 82.221.139.190;
 allow 82.68.49.227;
 allow 82.85.247.254;
 allow 83.217.9.73;
@@ -2021,7 +2017,6 @@ allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.254.132;
-allow 87.120.254.192;
 allow 87.120.8.136;
 allow 88.209.197.213;
 allow 88.80.20.86;
@@ -2068,8 +2063,6 @@ allow 92.243.24.163;
 allow 92.246.138.145;
 allow 92.246.84.133;
 allow 93.123.12.112;
-allow 93.123.12.164;
-allow 93.123.12.240;
 allow 93.90.74.31;
 allow 93.95.225.141;
 allow 93.95.228.125;
