Update lists at 20240814-0900

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -84,6 +84,7 @@ allow 107.189.8.133;
 allow 107.189.8.136;
 allow 107.189.8.181;
 allow 107.189.8.226;
+allow 107.189.8.238;
 allow 107.189.8.5;
 allow 107.189.8.56;
 allow 107.189.8.65;
@@ -162,6 +163,7 @@ allow 154.26.159.157;
 allow 154.30.210.35;
 allow 154.30.210.36;
 allow 154.30.210.37;
+allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.247.72.192;
@@ -626,6 +628,7 @@ allow 193.189.100.203;
 allow 193.189.100.204;
 allow 193.189.100.205;
 allow 193.189.100.206;
+allow 193.200.17.85;
 allow 193.218.118.133;
 allow 193.218.118.155;
 allow 193.218.118.173;
@@ -691,6 +694,7 @@ allow 199.195.253.124;
 allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
+allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4060:a01f::12a6;
 allow 2001:1af8:4700:a114:6::1;
@@ -1176,6 +1180,7 @@ allow 2605:6400:30:f307:ff42:3928:c777:8563;
 allow 2605:6400:30:f32b:7417:ea33:425b:9732;
 allow 2605:6400:30:f32b:8fec:4251:d9d1:1ff5;
 allow 2605:6400:30:f32b:c191:e73e:8bd5:9c61;
+allow 2605:6400:30:f330:61ea:72a8:8aea:fa1f;
 allow 2605:6400:30:f38b:28b3:cd24:51f3:e412;
 allow 2605:6400:30:f414:42ce:c612:dab8:1337;
 allow 2605:6400:30:f440:757e:adf1:55f7:5a31;
@@ -1474,7 +1479,6 @@ allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:104:fe02::1;
 allow 2a04:52c0:105:78fc::1;
-allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:113:2b92::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -1733,6 +1737,7 @@ allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a10:1fc0:10::debc:26b9;
 allow 2a10:1fc0:1::e016:2586;
+allow 2a10:1fc0:8::a061:729b;
 allow 2a10:1fc0:d::7384:5a63;
 allow 2a10:1fc0:d::9c5b:b08e;
 allow 2a10:c800:1:9cc6::1;
@@ -1777,6 +1782,7 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
 allow 43.157.40.39;
+allow 44.217.188.11;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1885,10 +1891,8 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.22.241.86;
 allow 5.255.100.219;
 allow 5.255.100.26;
-allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.108.103;
@@ -2031,6 +2035,7 @@ allow 89.58.41.251;
 allow 89.58.63.200;
 allow 91.103.253.141;
 allow 91.132.144.59;
+allow 91.193.18.63;
 allow 91.202.5.104;
 allow 91.203.144.194;
 allow 91.203.145.116;
