--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -1,3 +1,4 @@
+allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4060:a01f::12a6;
 allow 2001:1af8:4700:a114:6::1;
@@ -216,6 +217,7 @@ allow 2605:6400:30:f307:ff42:3928:c777:8563;
 allow 2605:6400:30:f32b:7417:ea33:425b:9732;
 allow 2605:6400:30:f32b:8fec:4251:d9d1:1ff5;
 allow 2605:6400:30:f32b:c191:e73e:8bd5:9c61;
+allow 2605:6400:30:f330:61ea:72a8:8aea:fa1f;
 allow 2605:6400:30:f38b:28b3:cd24:51f3:e412;
 allow 2605:6400:30:f414:42ce:c612:dab8:1337;
 allow 2605:6400:30:f440:757e:adf1:55f7:5a31;
@@ -513,7 +515,6 @@ allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:104:fe02::1;
 allow 2a04:52c0:105:78fc::1;
-allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:113:2b92::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -772,6 +773,7 @@ allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a10:1fc0:10::debc:26b9;
 allow 2a10:1fc0:1::e016:2586;
+allow 2a10:1fc0:8::a061:729b;
 allow 2a10:1fc0:d::7384:5a63;
 allow 2a10:1fc0:d::9c5b:b08e;
 allow 2a10:c800:1:9cc6::1;
