--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -1,3 +1,4 @@
+allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4060:a01f::12a6;
 allow 2001:1af8:4700:a114:6::1;
@@ -216,10 +217,8 @@ allow 2605:6400:30:f307:ff42:3928:c777:8563;
 allow 2605:6400:30:f32b:7417:ea33:425b:9732;
 allow 2605:6400:30:f32b:8fec:4251:d9d1:1ff5;
 allow 2605:6400:30:f32b:c191:e73e:8bd5:9c61;
-allow 2605:6400:30:f330:61ea:72a8:8aea:fa1f;
 allow 2605:6400:30:f38b:28b3:cd24:51f3:e412;
 allow 2605:6400:30:f414:42ce:c612:dab8:1337;
-allow 2605:6400:30:f440:757e:adf1:55f7:5a31;
 allow 2605:6400:30:f44f:1::;
 allow 2605:6400:30:f49b:e2ee:34f8:c854:6f63;
 allow 2605:6400:30:f4ae:8f7b:cc6e:d1d7:b978;
@@ -558,7 +557,6 @@ allow 2a07:b242:1000:1300:f250:8f0a:cdba:4d76;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
 allow 2a09:6301:0:2e1:b492:c29e:f532:42c6;
-allow 2a0a:3840:8078:27:0:504e:1b42:1337;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
