--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -125,6 +125,7 @@ allow 130.193.15.186;
 allow 135.125.205.25;
 allow 136.244.111.163;
 allow 138.59.18.110;
+allow 139.162.249.209;
 allow 139.99.172.11;
 allow 139.99.184.245;
 allow 139.99.8.57;
@@ -163,6 +164,7 @@ allow 154.30.210.35;
 allow 154.30.210.36;
 allow 154.30.210.37;
 allow 154.30.210.38;
+allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.247.72.192;
@@ -694,6 +696,7 @@ allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
 allow 199.83.103.12;
+allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4060:a01f::12a6;
 allow 2001:1af8:4700:a114:6::1;
@@ -848,7 +851,6 @@ allow 204.8.96.116;
 allow 204.8.96.117;
 allow 204.8.96.118;
 allow 204.8.96.119;
-allow 204.8.96.120;
 allow 204.8.96.121;
 allow 204.8.96.122;
 allow 204.8.96.123;
@@ -1294,7 +1296,6 @@ allow 2620:7:6001::116;
 allow 2620:7:6001::117;
 allow 2620:7:6001::118;
 allow 2620:7:6001::119;
-allow 2620:7:6001::120;
 allow 2620:7:6001::121;
 allow 2620:7:6001::122;
 allow 2620:7:6001::123;
@@ -1713,6 +1714,8 @@ allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:1b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
+allow 2a0f:9400:7e11:89c::1;
+allow 2a0f:9400:7e11:b852::1;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
@@ -1758,8 +1761,8 @@ allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.220.75.237;
 allow 31.42.185.134;
+allow 34.238.36.56;
 allow 35.0.127.52;
-allow 35.170.164.76;
 allow 37.114.41.119;
 allow 37.1.201.144;
 allow 37.120.190.85;
@@ -1858,6 +1861,7 @@ allow 45.95.169.228;
 allow 45.95.169.229;
 allow 45.95.169.230;
 allow 45.95.169.255;
+allow 45.95.202.48;
 allow 46.165.243.36;
 allow 46.182.21.248;
 allow 46.232.251.191;
@@ -1890,6 +1894,7 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.108.103;
@@ -1981,6 +1986,7 @@ allow 82.115.5.145;
 allow 82.115.5.146;
 allow 82.115.5.147;
 allow 82.118.242.62;
+allow 82.153.138.119;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.139.190;
@@ -2021,6 +2027,7 @@ allow 89.147.111.124;
 allow 89.147.111.87;
 allow 89.185.85.140;
 allow 89.187.143.31;
+allow 89.213.174.248;
 allow 89.234.157.254;
 allow 89.236.112.100;
 allow 89.36.231.128;
@@ -2072,6 +2079,12 @@ allow 94.16.116.81;
 allow 94.16.116.86;
 allow 94.16.121.226;
 allow 94.16.121.91;
+allow 94.177.106.247;
+allow 94.177.106.37;
+allow 94.177.106.46;
+allow 94.177.106.54;
+allow 94.177.106.55;
+allow 94.177.106.59;
 allow 94.228.163.25;
 allow 94.228.169.70;
 allow 94.230.208.147;
