--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -292,7 +292,6 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
-set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
@@ -538,7 +537,6 @@ set_real_ip_from 185.56.83.83;
 set_real_ip_from 185.67.82.114;
 set_real_ip_from 185.7.33.146;
 set_real_ip_from 185.82.219.109;
-set_real_ip_from 185.84.31.254;
 set_real_ip_from 185.91.116.202;
 set_real_ip_from 188.165.200.97;
 set_real_ip_from 188.172.229.15;
@@ -1449,7 +1447,6 @@ set_real_ip_from 2a03:4000:66:d88:6469:50ff:fe0b:98a8;
 set_real_ip_from 2a03:4000:6:b175:c429:e0ff:fe67:ea12;
 set_real_ip_from 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 set_real_ip_from 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
-set_real_ip_from 2a03:6f20:531::254;
 set_real_ip_from 2a03:94e0:2421:dead::1;
 set_real_ip_from 2a03:94e0:242c:dead::1;
 set_real_ip_from 2a03:94e0:243a:dead::1;
@@ -1701,7 +1698,6 @@ set_real_ip_from 2a0c:16c2:500:130::786b;
 set_real_ip_from 2a0c:16c2:500:131::2bd3;
 set_real_ip_from 2a0c:16c2:500:132::7b5d;
 set_real_ip_from 2a0c:2500:571:3b8:7843:ef93:cb81:a913;
-set_real_ip_from 2a0c:2500:571:3b8:c078:bc86:be0d:bdce;
 set_real_ip_from 2a0c:2500:571:3b8:d16c:c69d:dcf5:a8f6;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
@@ -1745,6 +1741,7 @@ set_real_ip_from 2a10:1fc0:d::7384:5a63;
 set_real_ip_from 2a10:1fc0:d::9c5b:b08e;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
+set_real_ip_from 2a11:6100:0:30::10;
 set_real_ip_from 2a12:5940:13e2::2;
 set_real_ip_from 2a12:5940:144f::2;
 set_real_ip_from 2a12:5940:52c2::2;
@@ -1764,6 +1761,7 @@ set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.42.185.134;
+set_real_ip_from 3.219.80.193;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.41.119;
 set_real_ip_from 37.1.201.144;
@@ -1894,7 +1892,6 @@ set_real_ip_from 51.89.153.112;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
-set_real_ip_from 52.21.253.154;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
@@ -1999,7 +1996,6 @@ set_real_ip_from 84.211.225.54;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 84.252.120.163;
 set_real_ip_from 84.252.121.55;
-set_real_ip_from 84.252.122.44;
 set_real_ip_from 85.17.9.83;
 set_real_ip_from 85.239.41.130;
 set_real_ip_from 85.93.218.204;
