--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -480,7 +480,6 @@ set_real_ip_from 2a03:4000:66:d88:6469:50ff:fe0b:98a8;
 set_real_ip_from 2a03:4000:6:b175:c429:e0ff:fe67:ea12;
 set_real_ip_from 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 set_real_ip_from 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
-set_real_ip_from 2a03:6f20:531::254;
 set_real_ip_from 2a03:94e0:2421:dead::1;
 set_real_ip_from 2a03:94e0:242c:dead::1;
 set_real_ip_from 2a03:94e0:243a:dead::1;
@@ -732,7 +731,6 @@ set_real_ip_from 2a0c:16c2:500:130::786b;
 set_real_ip_from 2a0c:16c2:500:131::2bd3;
 set_real_ip_from 2a0c:16c2:500:132::7b5d;
 set_real_ip_from 2a0c:2500:571:3b8:7843:ef93:cb81:a913;
-set_real_ip_from 2a0c:2500:571:3b8:c078:bc86:be0d:bdce;
 set_real_ip_from 2a0c:2500:571:3b8:d16c:c69d:dcf5:a8f6;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
@@ -776,6 +774,7 @@ set_real_ip_from 2a10:1fc0:d::7384:5a63;
 set_real_ip_from 2a10:1fc0:d::9c5b:b08e;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
+set_real_ip_from 2a11:6100:0:30::10;
 set_real_ip_from 2a12:5940:13e2::2;
 set_real_ip_from 2a12:5940:144f::2;
 set_real_ip_from 2a12:5940:52c2::2;
